fix: need check token quota limit
